deploy/person-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: person-service
spec:
  selector:
    app: person-server
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 50051
      nodePort: 32222
